# mautic2keycloak

./: config.example.yml  config.yml.example  main.py  mautic.py  pyproject.toml
