[tool.poetry]
name = "mautic2keycloak"
version = "0.1.0"
description = "Automatically imports Mautic contacts into Keycloak"
authors = ["Lukas Martini <hello@lutoma.org>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
requests-toolbelt = "^0.9.1"
python-keycloak = { git = "https://github.com/lutoma/python-keycloak.git", rev = "6ed65ea4e51098e9eb805dbfd31f4a0ac62212a5" }
PyYAML = "^5.3.1"
Unidecode = "^1.1.2"
systemd-python = "^234"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
